# NPCluster

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  NAMESPACE  NPCluster.Rproj  TODO.txt
R/: DLBCL.R  NPCluster.R  PDP.functions.R  RcppExports.R  Untitled.R  Untitled2.R  check_code.R  dahl.R  elementwise_DP.functions.R  elementwise_main.R  fast_PDP.functions.R  gen.X.R  gen.clust.R  iterations.R  lso.R  main.R  profile_code.R  proftable.R  split.merge.R
data/: DLBCL.rda  dlbcl.rda
man/: NPCluster-package.Rd  NPCluster.Rd  assertEqual.Rd  createComputeMode.Rd  dlbcl.Rd  fitExample.Rd  lso.Rd  npclustData.Rd  npclustFit.Rd  profileExample.Rd  proftable.Rd  simulateExample.Rd
src/: AbstractDataObject.h  AbstractEngine.h  Makevars  Makevars.win  NeighborhoodGraph.h  RcppExports.cpp  RcppKMeans.cpp  RcppNPCluster.cpp
standalone/: CMakeLists.txt  Makefile  benchmark.cpp
standalone/CMakeModules/: FindR.cmake
standalone/src/: benchmark.cpp
tests/: testthat.R
tests/testthat/: test-null.R
